Add lazily paged streams and take-until stream operators
Adds a family of stream operators to StreamUtils and builds the paged
stream API on top of them, so that skipping pages or elements no longer
retrieves the pages that are skipped.

Stream operators:
- sequentialized(Stream): non-splittable, strictly sequential view of a
  stream. The substrate for every order dependent operator, since a
  downstream parallel() can no longer split the source out from under
  consumer side state.
- takeUntilInclusive / takeUntilExclusive: take elements up to and
  including, or up to but excluding, the first match.
  takeUntilLastElementIncluded becomes a synonym of the inclusive form.
- takeUntilObservedTermination: terminates when an already emitted
  element signals it via a TerminationSignal, rather than by applying a
  predicate. Elements are never dereferenced by the operator itself,
  which is what allows a downstream skip to discard them unresolved.

The take operators are now spliterator based. The previous takeWhile
implementation produced wrong results when the caller parallelized the
resulting stream, because sequential/parallel is a property of the whole
pipeline rather than of a single stage.

StreamDecoratorLazyLoading:
- map is lazy: the mapper is pushed into the suppliers, so elements
  discarded by a downstream skip or limit are never resolved or mapped.
- optional skip observer which reports the accumulated skip offset, so
  the producer of the suppliers knows the position of the first element
  the consumer will actually resolve.

Paged streams:
- Page.isLastPage is optional now. If it is not set, the last page is
  determined by the fill level of the page. Page.of(elements) and
  Page.of(elements, isLastPage) added as shortcuts.
- Element positions are resolved through a cursor which rolls over
  partially filled pages, falling back to the page size based mapping
  where no predecessor has been resolved.
- An element is only emitted once it is known to be av